--- a/www/game/project.json
+++ b/www/game/project.json
@@ -1,7 +1,7 @@
 {
   "title": "Spark Demo",
   "version": 1.0,
-  "assetRelativePath": "",
+  "assetRelativePath": "assets/",
   "assets": {
     "starfield":     { "class": "spark.texture.Image", "source": "background.png" },
     "asteroid_0":    { "class": "spark.texture.Image", "source": "asteroid_big_1.png" },
