Added asteroid explosion emitter and forwardAngle to emitter.

--- a/www/game/project.json
+++ b/www/game/project.json
@@ -18,6 +18,7 @@
     "pickup_sound":  { "class": "spark.audio.Clip", "source": "pickup.ogg" },
     "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.ogg" },
     "rumble_sound":  { "class": "spark.audio.Clip", "source": "rumble.ogg" },
-    "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" }
+    "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
+    "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" }
   }
 }
