Added spark.texture.Font as a loadable asset type.

--- a/www/game/project.json
+++ b/www/game/project.json
@@ -19,6 +19,7 @@
     "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.ogg" },
     "rumble_sound":  { "class": "spark.audio.Clip", "source": "rumble.ogg" },
     "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
-    "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" }
+    "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" },
+    "bb":            { "class": "spark.texture.Font", "source": "BulletproofBB.otf" }
   }
 }
