Shaders can now be loaded programs. Attributes and uniforms are mapped in JSON. Basic shader handles the load screen. Layers with no shader don't render.

--- a/www/game/project.json
+++ b/www/game/project.json
@@ -2,6 +2,10 @@
   "title": "Spark Demo",
   "version": 1.0,
   "assetRelativePath": "assets/",
+  "shader": {
+    "basic": "basic_shader.json",
+    "sprite": "sprite_shader.json"
+  },
   "assets": {
     "starfield":     { "class": "spark.texture.Image", "source": "background.png" },
     "asteroid_0":    { "class": "spark.texture.Image", "source": "asteroid_big_1.png" },
