--- a/www/game/project.json
+++ b/www/game/project.json
@@ -21,6 +21,6 @@
     "rumble_sound":  { "class": "spark.audio.Clip", "source": "rumble.ogg" },
     "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
     "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" },
-    "bb":            { "class": "spark.texture.Font", "source": "BulletproofBB.otf" }
+    "proggy":        { "class": "spark.texture.Font", "source": "console.fnt" }
   }
 }
