--- a/www/game/project.json
+++ b/www/game/project.json
@@ -3,24 +3,22 @@
   "version": 1.0,
   "assetRelativePath": "assets/",
   "assets": {
-    "sprite_shader": { "class": "spark.shader.Program", "source": "sprite_shader.json" },
-    "starfield":     { "class": "spark.texture.Image", "source": "background.png" },
-    "asteroid_0":    { "class": "spark.texture.Image", "source": "asteroid_big_1.png" },
-    "asteroid_1":    { "class": "spark.texture.Image", "source": "asteroid_big_2.png" },
-    "asteroid_2":    { "class": "spark.texture.Image", "source": "asteroid_big_3.png" },
-    "asteroid_3":    { "class": "spark.texture.Image", "source": "asteroid_big_4.png" },
-    "particle_0":    { "class": "spark.texture.Image", "source": "asteroid_particle_1.png" },
-    "particle_1":    { "class": "spark.texture.Image", "source": "asteroid_particle_2.png" },
-    "player_ship":   { "class": "spark.texture.Image", "source": "player.png" },
-    "player_thrust": { "class": "spark.texture.Image", "source": "thrust.png" },
-    "player_laser":  { "class": "spark.texture.Image", "source": "laser.png" },
-    "player_shield": { "class": "spark.texture.Image", "source": "shield.png" },
-    "particle":      { "class": "spark.texture.Image", "source": "particle.png" },
-    "pickup_sound":  { "class": "spark.audio.Clip", "source": "pickup.ogg" },
-    "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.ogg" },
-    "rumble_sound":  { "class": "spark.audio.Clip", "source": "rumble.ogg" },
-    "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
-    "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" },
-    "proggy":        { "class": "spark.texture.Font", "source": "console.fnt" }
+    "starfield":     { "class": "spark.Image", "source": "background.png" },
+    "asteroid_0":    { "class": "spark.Image", "source": "asteroid_big_1.png" },
+    "asteroid_1":    { "class": "spark.Image", "source": "asteroid_big_2.png" },
+    "asteroid_2":    { "class": "spark.Image", "source": "asteroid_big_3.png" },
+    "asteroid_3":    { "class": "spark.Image", "source": "asteroid_big_4.png" },
+    "particle_0":    { "class": "spark.Image", "source": "asteroid_particle_1.png" },
+    "particle_1":    { "class": "spark.Image", "source": "asteroid_particle_2.png" },
+    "player_ship":   { "class": "spark.Image", "source": "player.png" },
+    "player_thrust": { "class": "spark.Image", "source": "thrust.png" },
+    "player_laser":  { "class": "spark.Image", "source": "laser.png" },
+    "player_shield": { "class": "spark.Image", "source": "shield.png" },
+    "particle":      { "class": "spark.Image", "source": "particle.png" },
+    "pickup_sound":  { "class": "spark.AudioClip", "source": "pickup.ogg" },
+    "laser_sound":   { "class": "spark.AudioClip", "source": "laser.ogg" },
+    "rumble_sound":  { "class": "spark.AudioClip", "source": "rumble.ogg" },
+    "thrust":        { "class": "spark.Emitter", "source": "thrust_emitter.json" },
+    "explode":       { "class": "spark.Emitter", "source": "asteroid_emitter.json" }
   }
 }
