Replaced sounds. Looping audio works. Added bullets GUI element and reload sound.

--- a/www/game/project.json
+++ b/www/game/project.json
@@ -16,8 +16,10 @@
     "player_shield": { "class": "spark.texture.Image", "source": "shield.png" },
     "particle":      { "class": "spark.texture.Image", "source": "particle.png" },
     "pickup_sound":  { "class": "spark.audio.Clip", "source": "pickup.ogg" },
-    "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.ogg" },
-    "rumble_sound":  { "class": "spark.audio.Clip", "source": "rumble.ogg" },
+    "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.mp3" },
+    "reload_sound":  { "class": "spark.audio.Clip", "source": "reload.mp3" },
+    "thrust_sound":  { "class": "spark.audio.Clip", "source": "thrusters.mp3" },
+    "explosion":     { "class": "spark.audio.Clip", "source": "explosion.mp3" },
     "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
     "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" },
     "bb":            { "class": "spark.texture.Font", "source": "BulletproofBB.otf" },
