First pass at TypeScript implementation.

--- a/www/game/project.json
+++ b/www/game/project.json
@@ -3,31 +3,25 @@
   "version": 1.0,
   "assetRelativePath": "assets/",
   "assets": {
-    "starfield":     { "class": "spark.texture.Image", "source": "background.png" },
-    "asteroid_0":    { "class": "spark.texture.Image", "source": "asteroid_big_1.png" },
-    "asteroid_1":    { "class": "spark.texture.Image", "source": "asteroid_big_2.png" },
-    "asteroid_2":    { "class": "spark.texture.Image", "source": "asteroid_big_3.png" },
-    "asteroid_3":    { "class": "spark.texture.Image", "source": "asteroid_big_4.png" },
-    "particle_0":    { "class": "spark.texture.Image", "source": "asteroid_particle_1.png" },
-    "particle_1":    { "class": "spark.texture.Image", "source": "asteroid_particle_2.png" },
-    "player_ship":   { "class": "spark.texture.Image", "source": "player.png" },
-    "planet":        { "class": "spark.texture.Image", "source": "planet.png" },
-    "player_thrust": { "class": "spark.texture.Image", "source": "thrust.png" },
-    "player_laser":  { "class": "spark.texture.Image", "source": "laser.png" },
-    "player_shield": { "class": "spark.texture.Image", "source": "shield.png" },
-    "particle":      { "class": "spark.texture.Image", "source": "particle.png" },
-    "pickup_sound":  { "class": "spark.audio.Clip", "source": "pickup.ogg" },
-    "laser_sound":   { "class": "spark.audio.Clip", "source": "laser.mp3" },
-    "reload_sound":  { "class": "spark.audio.Clip", "source": "reload.mp3" },
-    "thrust_sound":  { "class": "spark.audio.Clip", "source": "thrusters.mp3" },
-    "explosion":     { "class": "spark.audio.Clip", "source": "explosion.mp3" },
-    "thrust":        { "class": "spark.particle.Emitter", "source": "thrust_emitter.json" },
-    "explode":       { "class": "spark.particle.Emitter", "source": "asteroid_emitter.json" },
-    "bb":            { "class": "spark.texture.Font", "source": "BulletproofBB.otf" },
-    "virgo":         { "class": "spark.texture.Font", "source": "virgo.ttf" },
-    "new_life":      { "class": "spark.anim.Timeline", "source": "new_life.json" },
-    "reload":        { "class": "spark.anim.Timeline", "source": "reload.json" },
-    "camera_shake":  { "class": "spark.anim.Timeline", "source": "shake.json" },
-    "spawn":         { "class": "spark.anim.Timeline", "source": "spawn.json" }
+    "starfield":     { "class": "spark.Texture", "source": "background.png" },
+    "asteroid_0":    { "class": "spark.Texture", "source": "asteroid_big_1.png" },
+    "asteroid_1":    { "class": "spark.Texture", "source": "asteroid_big_2.png" },
+    "asteroid_2":    { "class": "spark.Texture", "source": "asteroid_big_3.png" },
+    "asteroid_3":    { "class": "spark.Texture", "source": "asteroid_big_4.png" },
+    "particle_0":    { "class": "spark.Texture", "source": "asteroid_particle_1.png" },
+    "particle_1":    { "class": "spark.Texture", "source": "asteroid_particle_2.png" },
+    "player_ship":   { "class": "spark.Texture", "source": "player.png" },
+    "planet":        { "class": "spark.Texture", "source": "planet.png" },
+    "player_thrust": { "class": "spark.Texture", "source": "thrust.png" },
+    "player_laser":  { "class": "spark.Texture", "source": "laser.png" },
+    "player_shield": { "class": "spark.Texture", "source": "shield.png" },
+    "particle":      { "class": "spark.Texture", "source": "particle.png" },
+    "pickup_sound":  { "class": "spark.Clip", "source": "pickup.ogg" },
+    "laser_sound":   { "class": "spark.Clip", "source": "laser.mp3" },
+    "reload_sound":  { "class": "spark.Clip", "source": "reload.mp3" },
+    "thrust_sound":  { "class": "spark.Clip", "source": "thrusters.mp3" },
+    "explosion":     { "class": "spark.Clip", "source": "explosion.mp3" },
+    "emitter":       { "class": "spark.Emitter", "source": "asteroid_emitter.json" },
+    "spawn":         { "class": "spark.Timeline", "source": "spawn.json" }
   }
 }
