--- a/www/game/project.json
+++ b/www/game/project.json
@@ -1,27 +1,5 @@
 {
-  "title": "Spark Demo",
+  "title": "Untitled",
   "version": 1.0,
-  "assetRelativePath": "assets/",
-  "assets": {
-    "starfield":     { "class": "spark.Texture", "source": "background.png" },
-    "asteroid_0":    { "class": "spark.Texture", "source": "asteroid_big_1.png" },
-    "asteroid_1":    { "class": "spark.Texture", "source": "asteroid_big_2.png" },
-    "asteroid_2":    { "class": "spark.Texture", "source": "asteroid_big_3.png" },
-    "asteroid_3":    { "class": "spark.Texture", "source": "asteroid_big_4.png" },
-    "particle_0":    { "class": "spark.Texture", "source": "asteroid_particle_1.png" },
-    "particle_1":    { "class": "spark.Texture", "source": "asteroid_particle_2.png" },
-    "player_ship":   { "class": "spark.Texture", "source": "player.png" },
-    "planet":        { "class": "spark.Texture", "source": "planet.png" },
-    "player_thrust": { "class": "spark.Texture", "source": "thrust.png" },
-    "player_laser":  { "class": "spark.Texture", "source": "laser.png" },
-    "player_shield": { "class": "spark.Texture", "source": "shield.png" },
-    "particle":      { "class": "spark.Texture", "source": "particle.png" },
-    "pickup_sound":  { "class": "spark.Clip", "source": "pickup.ogg" },
-    "laser_sound":   { "class": "spark.Clip", "source": "laser.mp3" },
-    "reload_sound":  { "class": "spark.Clip", "source": "reload.mp3" },
-    "thrust_sound":  { "class": "spark.Clip", "source": "thrusters.mp3" },
-    "explosion":     { "class": "spark.Clip", "source": "explosion.mp3" },
-    "emitter":       { "class": "spark.Emitter", "source": "asteroid_emitter.json" },
-    "spawn":         { "class": "spark.Timeline", "source": "spawn.json" }
-  }
+  "assetPath": "assets/"
 }
